# sagemaker-mlops-with-terraform

./: .gitignore  main.ipynb  pyproject.toml
.sagemaker/: config.yaml
src/: local_mlflow.py
src/comparison/prepare/: download_training_runs.ipynb  pull_local_run_data_from_mlflow.ipynb  total_tokens_in_dataset_10000.ipynb  total_tokens_in_dataset_full.ipynb
src/lib/: sagemaker.py
src/lib/config/: config.py
src/preprocess/standardize/: two_car_pros.py  two_car_pros_test.py
src/train/F2LLM_v2_160M_embedding/: train.ipynb  train_local.ipynb
src/train/F2LLM_v2_160M_embedding/sagemaker/: shared.py  train.py
src/train/gist_small_embedding/: shared.py  train.ipynb  train_local.ipynb
src/train/gist_small_embedding/sagemaker/: pre-installed-requirements.txt  shared.py
src/train/minilm_embedding/: train.ipynb  train_local.ipynb
src/train/minilm_embedding/sagemaker/: launch.sh  shared.py
src/train/static_embedding/: train.ipynb  train_local.ipynb
src/train/static_embedding/sagemaker/: requirements.txt  shared.py
terraform/: main.tf  mlflow.tf  outputs.tf  sagemaker.tf  user.tf  variables.tf  vpc.tf
