[project]
name = "sagemaker-mlops-with-terraform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.7.0",
    #
    "lancedb>=0.29.2",
    "markupsafe==2.1.5",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "trl>=0.29.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
