[project]
name = "sagemaker-mlops-with-terraform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "beautifulsoup4>=4.14.3",
    "bitsandbytes",
    "datasets",
    "ipykernel>=7.2.0",
    "lancedb>=0.29.2",
    "markupsafe==2.1.5",
    "matplotlib>=3.10.8",
    "peft",
    "pydantic>=2.11.3",
    "sagemaker==3.5.0",
    "sentence-transformers>=5.3.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers",
    "trl",
    "mlflow",
    "plotly>=6.6.0",
    "nbformat>=5.10.4",
    "pip>=26.0.1",
    "notebook>=7.5.5",
    "nbconvert>=6.5.4",
    "lxml[html-clean]>=6.0.2",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
